--- a/생활코딩 - 서버 - 인프라 - 리눅스/24. 웹서버(아파치).md
+++ b/생활코딩 - 서버 - 인프라 - 리눅스/24. 웹서버(아파치).md
@@ -43,6 +43,25 @@ apt-get install elinks
 ![캡처](https://user-images.githubusercontent.com/31675104/65374820-365b4880-dcc9-11e9-898d-aabb1ec4bed0.PNG)
 
 
+### 3. apache configuration
+ - unix 계열에서 어떤 프로그램이 어떻게 동작할 것인가에 대한 설정은 /etc에 설정되어 있다.
+ - apache2에 대한 설정 파일은 /etc/apache2에 존재한다.
+ - 가장 중요한 파일은 apache2.conf 이다. apache2.conf를 보면 아래의 사진처럼 설정파일을 가져오는 부분이 있는데 아래 설정의 뜻은 /etc/apache2/sites-enabled 디렉토리 안에 있는 확장자가 .conf인 파일을 모두 include 한다는 뜻이다.
 
+     ![캡처](https://user-images.githubusercontent.com/31675104/65434595-098a6b00-de5a-11e9-9792-6fe69f30513d.PNG)
+
+  - 아래 사진은 /etc/apache2/sites-enabled 디렉토리이며, .conf로 끝나는 파일이 있는 것을 알 수 있다.
+
+    ![캡처](https://user-images.githubusercontent.com/31675104/65434869-83225900-de5a-11e9-8ef7-64fe419ea592.PNG)
+
+- 해당 파일을 열어보면 아래와 같은 설정이 있으며, 설명하자면 80번 포트로 HTTP 요청이 들어오면 DocumentRoot에 있는 index.html을 전송하는 설정이다.
+    ![캡처1](https://user-images.githubusercontent.com/31675104/65434596-0a230180-de5a-11e9-8d2f-41f5f2537557.PNG)
+
+### 3. log
+ - 위에서 말한 apache 설정 파일을 보면 ErrorLog와 CustomLog가 있는 것을 볼 수 있다. ErrorLog는 apache 오류와 관련된 log를 저장하는 파일이며, CustomLog는 apache에 접근한 내역을 볼 수 있는 로그이다.
+
+    ![캡처1](https://user-images.githubusercontent.com/31675104/65434596-0a230180-de5a-11e9-8d2f-41f5f2537557.PNG)
+
+ > ${APACHE_LOG_DIR}은 /var/log/apache2이다.
 
 
